# open66claw

./: .env.example  .gitignore  .openclaw-version  AGENTS.md  Dockerfile  NOTICE  README.md  figma_data.json  install-cn.ps1  install-cn.sh  package.json  pnpm-workspace.yaml  upgrade-cn.ps1  upgrade-cn.sh
66claw-docs/: architecture-overview.md  code-ownership-analysis.md  coexistence-with-openclaw.md  custom-files-inventory.md  desktop-icon-guide.md  upstream-modifications.md
apps/desktop/src-tauri/: Cargo.toml  build-last.log.err  build.rs  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/woclaw/: icon.icns
apps/desktop/src-tauri/icons/xiaoyuan/: icon.icns
apps/desktop/src-tauri/nsis/: hooks.nsh
apps/desktop/src-tauri/scripts/: fix-extension-entries.mjs  fix-ts-imports.mjs  oem-patch.mjs  stage-dist.sh  transpile-src.mjs
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  offline_diag.rs  sidecar.rs  tray.rs
apps/desktop/src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
apps/desktop/src-tauri/src/repair/: ai_client.rs  diagnostics.rs  mod.rs  provider_discovery.rs  remote_tunnel.rs  repair_actions.rs  ssh_setup.rs
ci/: test-macos-functional.sh  test-macos-local.sh
clawhub-scraper/: .env.example  config.js  package.json
docs/: AGENTS-PAGE-REDESIGN-SPEC.md  MCP-EXTENSIONS-PAGE-SPEC.md  MODEL-CONFIG-FIGMA-REVIEW.md  MODEL-CONFIG-PAGE-SPEC.md  MODEL-CONFIG-REDESIGN-SPEC.md  SKILLS-PAGE-SPEC.md  export_bg.cjs  export_bg_img.cjs  export_btn.cjs  (+25 more)
(+818 files in other folders)
