[package]
name = "sixtysixclaw-desktop"
version = "1.0.4"
description = "66Claw desktop application"
authors = ["66Claw Contributors"]
license = "MIT"
repository = "https://github.com/sunshineonly1314/newopneclaw"
edition = "2021"

[lib]
name = "openclawcn_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"  # Required by tauri::generate_context!()
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
dirs = "5"
url = "2"
getrandom = "0.2"
open = "5"
futures = "0.3"
aes-gcm = "0.10"
base64 = "0.22"
json5 = "0.4"
sha2 = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
tokio = { version = "1", features = ["rt", "macros"] }
